--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 					</ul>
 				</nav>
 			</header>
-
-			<!-- Banner -->
-			<section id="banner">
+<!--Banner-->
+			<section id="banner" style="background-image: url('images/11.jpg'); background-size: cover;">
 				<div class="content">
 					<header>
 						<h2>Your One-Stop Shop for Truck Parts</h2>
